--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,8 +15,6 @@ body {
 .webtitle {
   text-transform: uppercase;
   letter-spacing: 0.5em;
-  border: 4px double rgba(255, 255, 255, 0.25);
-  border-width: 4px 0;
   padding: 1.5em 0em;
   width: 40em;
 }
@@ -45,6 +43,49 @@ body {
   -webkit-backface-visibility: hidden;
 }
 
+.start_journey_text {
+  text-transform: uppercase;
+  font-size: 1.2em;
+  font-weight: 700;
+  color: #bebcbc;
+}
+
+.start_journey {
+  text-transform: uppercase;
+  font-family: "verdana";
+  font-size: 8em;
+  font-weight: 700;
+  color: #f5f5f5;
+  text-shadow: 1px 1px 1px #300b00, 1px 2px 1px #300b00, 1px 3px 1px #300b00,
+    1px 4px 1px #300b00, 1px 5px 1px #300b00, 1px 6px 1px #300b00,
+    1px 7px 1px #300b00, 1px 8px 1px #300b00, 1px 9px 1px #300b00,
+    1px 10px 1px #300b00, 1px 18px 6px rgba(16, 16, 16, 0.4),
+    1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
+    1px 30px 60px rgba(16, 16, 16, 0.4);
+
+  transition: 1s;
+}
+
+.auth_title {
+  text-transform: uppercase;
+  font-family: "verdana";
+  font-size: 2em;
+  font-weight: 700;
+  color: #f5f5f5;
+  text-shadow: 1px 1px 1px #300b00, 1px 2px 1px #300b00, 1px 3px 1px #300b00,
+    1px 4px 1px #300b00, 1px 5px 1px #300b00, 1px 6px 1px #300b00,
+    1px 7px 1px #300b00, 1px 8px 1px #300b00, 1px 9px 1px #300b00,
+    1px 10px 1px #300b00, 1px 18px 6px rgba(16, 16, 16, 0.4),
+    1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
+    1px 30px 60px rgba(16, 16, 16, 0.4);
+
+  transition: 1s;
+}
+
+.start_journey:hover {
+  font-size: 10em;
+  color: #793905;
+}
 /* Animate Background Image */
 
 @-webkit-keyframes aitf {
